--- a/force-app/main/default/classes/getAllPokemon.cls
+++ b/force-app/main/default/classes/getAllPokemon.cls
@@ -36,27 +36,34 @@ public with sharing class getAllPokemon {
         return searchType;
     }
     
-    @AuraEnabled(Cacheable=true scope='global')
-    public static List <Pokemon__c> searchPokemon(String pokemonName){
-        pokemonName = pokemonName.trim();
-        if (pokemonName == '') { 
-            return getAllPokemon();
-        }
-            pokemonName = '%' + pokemonName + '%';
-            return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Name LIKE :pokemonName ORDER BY ExtId__c ASC];
-    }
-
     @AuraEnabled (Cacheable=true scope ='global')
-    public static List <Pokemon__c> filterPicklist (Integer generation, String type, String type2){
-        if (generation == 0 && type == '') { 
+    public static List <Pokemon__c> filterComplete (String pokemonName, Integer generation, String type, String type2){
+        if (pokemonName == '' && generation == 0 && type == '') { 
             return getAllPokemon();
-        }else if (generation != 0 && type == '') {
+        }else if (pokemonName == '' && generation != 0 && type == '') {
             return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Generation__c = :generation ORDER BY ExtId__c ASC];
-        } else if (generation == 0 && type != '') {
+        } else if (pokemonName == '' && generation == 0 && type != '') {
             String searchType = getTypePokemon(type, type2);
             return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Types__c =:searchType ORDER BY ExtId__c ASC];
-        }
+        } else if (pokemonName != '' && generation == 0 && type == '') {
+            pokemonName = '%' + pokemonName + '%';
+            return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Name LIKE :pokemonName ORDER BY ExtId__c ASC];
+        } else if (pokemonName != '' && generation != 0 && type == '') {
+            pokemonName = '%' + pokemonName + '%';
+            return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Name LIKE :pokemonName AND Generation__c =:generation ORDER BY ExtId__c ASC];
+        } else if (pokemonName != '' && generation == 0 && type != '') {
+            pokemonName = '%' + pokemonName + '%';
             String searchType = getTypePokemon(type, type2);
-            return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Generation__c = :generation AND Types__c =:searchType ORDER BY ExtId__c ASC];
+            return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Name LIKE :pokemonName AND Types__c =:searchType ORDER BY ExtId__c ASC];
+        } 
+
+
+
+        pokemonName = '%' + pokemonName + '%';
+            String searchType = getTypePokemon(type, type2);
+            return [SELECT ExtId__c, Name, Types__c, Image__c, Generation__c FROM Pokemon__c WHERE Name LIKE :pokemonName AND Generation__c = :generation AND Types__c =:searchType ORDER BY ExtId__c ASC];
     }
+
+
+
 }
